merged resign and sign statements methods, corrected validation and unit tests accordingly + code refactor