@@ -2,9 +2,9 @@ package org.lukawska.trainsmart.statements.infra.config;
 
 import jakarta.annotation.PostConstruct;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.stereotype.Component;
 
@@ -14,16 +14,14 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-
 @Component
 @ConfigurationProperties
-@NoArgsConstructor
 @Getter
 @Setter
 @Slf4j
 public class StatementsDefinition {
 
-    private Map<String, Statement> statements = new HashMap<>();
+    private final Map<String, Statement> statements = new HashMap<>();
 
     public Optional<Statement> findStatementByCode(String code) {
         return Optional.ofNullable(statements.get(code));
@@ -38,21 +36,19 @@ public class StatementsDefinition {
 
     @PostConstruct
     public void validateMapping() {
-        if (statements == null || statements.isEmpty()) {
+        if (statements.isEmpty()) {
             log.warn("No statements configured under 'statements' prefix");
             return;
         }
 
-        List<String> invalidKeys = statements.entrySet().stream()
-                                             .filter(e -> e.getKey() == null || e.getKey()
-                                                                                 .isBlank() || e.getValue() == null)
+        List<String> invalidKeys = statements.entrySet()
+                                             .stream()
+                                             .filter(e -> StringUtils.isBlank(e.getKey()) || e.getValue() == null)
                                              .map(Map.Entry::getKey)
                                              .toList();
 
         if (!invalidKeys.isEmpty()) {
             throw new IllegalStateException("Invalid statements configuration for keys: " + invalidKeys);
         }
-
-        log.info("Loaded {} statement(s) from configuration", statements.size());
     }
 }
